# jquants-mcp-server

./: CLAUDE.md  README.md  Taskfile.yml  pyproject.toml
docs/rewrite-with-library/: context.md
src/jquants_free_mcp_server/: server.py
src/jquants_mcp_server/: server.py
tests/: test_server.py
