[project]
name = "jquants-free-mcp-server"
version = "0.0.1"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "mcp>=1.7.1",
 "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
 "pytest>=7.0.0",
]

[[project.authors]]
name = "cygkichi"
email = "9675041+cygkichi@users.noreply.github.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
jquants-free-mcp-server = "jquants_free_mcp_server:main"
