[project]
name = "jquants-mcp-server"
version = "1.0.0"
description = "MCP server for J-Quants API - Access Japanese stock market data including prices, financial statements, and trading information"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "mcp>=1.7.1",
 "jquants-api-client>=1.9.0",
]

[project.optional-dependencies]
dev = [
 "pytest>=7.0.0",
]

[[project.authors]]
name = "㐂乃"
email = "4271312+kinoh@users.noreply.github.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
jquants-mcp-server = "jquants_mcp_server:main"
